--- a/HTML/Freelancer/index.html
+++ b/HTML/Freelancer/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <link rel="preload" href="./css/styles.css" as="style">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Juan De la torre Freelancer</h1>
+        <h1>Carlos Alberto Nin <span>Freelancer</span></h1>
     </header>
 
     <nav>
