--- a/HTML/Freelancer/index.html
+++ b/HTML/Freelancer/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>Carlos Alberto Nin <span>Freelancer</span></h1>
+        <h1 class="titulo">Carlos Alberto Nin <span>Freelancer</span></h1>
     </header>
 
     <nav>
@@ -22,10 +22,9 @@
         <a href="#">Contacto</a>
     </nav>
 
-    <img src="./img/hero.jpg" alt="Imagen hero">
 
     <section>
-        <h2>Diseño y Desarollo Web Freelancer</h2>
+        <h2 class="titulo">Diseño y Desarollo Web Freelancer</h2>
         <p>
             <svg xmlns="http://www.w3.org/2000/svg" width="88px" height="88px" viewBox="0 0 24 24" fill="none"
                 stroke="#FFC107" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
