--- a/HTML/Freelancer/index.html
+++ b/HTML/Freelancer/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <link rel="stylesheet" href="./css/normalice.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="preload" href="./css/styles.css" as="style">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -15,12 +19,15 @@
         <h1 class="titulo">Carlos Alberto Nin <span>Freelancer</span></h1>
     </header>
 
-    <nav>
+    <div class="nav-bg">
+        <nav class="navgacion-principal contenedor">
         <a href="#">Inicio</a>
         <a href="#">Sobre Mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contacto</a>
     </nav>
+    </div>
+    
 
 
     <section>
@@ -130,10 +137,10 @@
                     <label>Mensaje</label>
                     <textarea></textarea>
                 </div>
-                
+
                 <div>
-                   <button type="submit" value="Enviar"></button>
-                </div>  
+                    <button type="submit" value="Enviar"></button>
+                </div>
             </fieldset>
 
         </form>
