--- a/HTML/Freelancer/index.html
+++ b/HTML/Freelancer/index.html
@@ -121,7 +121,7 @@
             </section>
         </div>
 
-        <section>
+        <section class="contacto">
             <h2>Contacto</h2>
 
             <form class="formulario">
@@ -131,31 +131,30 @@
                     <div class="contenedor-campos">
                         <div class="campo">
                             <label>Nombre</label>
-                            <input type="text" placeholder="Tu Nombre">
+                            <input class="input-text" type="text" placeholder="Tu Nombre">
                         </div>
 
                         <div class="campo">
                             <label>Teléfono</label>
-                            <input type="tel" placeholder="Tu teléfono">
+                            <input class="input-text" type="tel" placeholder="Tu teléfono">
 
                         </div>
 
                         <div class="campo">
                             <label>Correo</label>
-                            <input type="email" placeholder="Tu Email">
+                            <input class="input-text" type="email" placeholder="Tu Email">
                         </div>
 
                         <div class="campo">
                             <label>Mensaje</label>
-                            <textarea></textarea>
+                            <textarea class="input-text"></textarea>
                         </div>
                     </div> <!-- Contenedor campos-->
-
-
-                    <div>
-                        <button type="submit" value="Enviar"></button>
-                    </div>
                 </fieldset>
+
+                <div class="alinear-derecha flex">
+                    <input class="boton w-100" type="submit" value="Enviar">
+                </div>
 
             </form>
         </section>
@@ -163,7 +162,7 @@
 
 
 
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados. Carlos Alberto Nin Freelancer</p>
     </footer>
 
