--- a/HTML/blogdecafe_inicio/index.html
+++ b/HTML/blogdecafe_inicio/index.html
@@ -52,53 +52,88 @@
 
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tipos de grano de café</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint culpa aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus
+                        quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint
+                        culpa aliquid.</p>
                     <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
                 </div>
             </article> <!-- Fin entrada-->
 
-             <article class="entrada">
+            <article class="entrada">
                 <div class="entrada__imagen">
                     <img src="./img/blog2.jpg" alt="Imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
                     <h4 class="no-margin">3 Deliciosas recetas de café</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint culpa aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus
+                        quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint
+                        culpa aliquid.</p>
                     <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
                 </div>
             </article> <!-- Fin entrada-->
 
 
-             <article class="entrada">
+            <article class="entrada">
                 <div class="entrada__imagen">
                     <img src="./img/blog3.jpg" alt="Imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Beneficios del café</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint culpa aliquid.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis quisquam tempora ducimus
+                        quis minus, quidem illo neque totam, est rem recusandae quibusdam eligendi ipsum ullam ab sint
+                        culpa aliquid.</p>
                     <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
                 </div>
-            </article>  <!-- Fin entrada-->
+            </article> <!-- Fin entrada-->
         </main> <!-- Fin blog-->
 
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
 
-            <ul class="cursos">
+            <ul class="cursos no-padding">
                 <li class="widget__curso">
                     <h4 class="no-margin">Técnicas de Extracción de Café</h4>
-                    <p class="widget__curso__label">Precio:<span class="widget__curso__info">Gratis</span></p>
-
+                    <p class="widget__curso__label">Precio:
+                        <span class="widget__curso__info">Gratis</span>
+                    </p>
                     <p class="widget__curso__label">Cupo:
                         <span class="widget__curso__info">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton--secundario">Leer Entrada</a>
+                    <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                </li> <!-- Fin widget Curso-->
+
+                <li class="widget__curso">
+                    <h4 class="no-margin">4 Recetas de Café para principiante </h4>
+                    <p class="widget__curso__label">Precio:
+                        <span class="widget__curso__info">Gratis</span>
+                    </p>
+                    <p class="widget__curso__label">Cupo:
+                        <span class="widget__curso__info">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton boton--secundario">Más Información</a>
                 </li> <!-- Fin widget Curso-->
             </ul>
         </aside>
     </div>
+
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="./index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contactos</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
